align and position all header elements correctly

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -50,13 +50,15 @@ ul {
   list-style-type: none;
 }
 
-.left-items{
+.items{
   display: flex;
   gap: 8px;
+  margin: 8px 16px;
 }
 
 .links{
   display: flex;
   gap: 8px;
 }
+
 
